@@ -1,6 +1,7 @@
 Version 0.7-1
 12-05-2015
 Remove depreciated functions. Update C++ rng for MBBEFD.
+Added startup message and warning
 
 Version 0.7
 03-05-2015
